--- a/src/main/webapp/inward/inward_search_final.xhtml
+++ b/src/main/webapp/inward/inward_search_final.xhtml
@@ -94,7 +94,7 @@
                                 <h:outputLabel value="#{bb.patientEncounter.patient.person.nameWithTitle}" ></h:outputLabel>
                             </p:column>         
                             <p:column headerText="PaymentMethod">                            
-                                <h:outputLabel value="#{bb.paymentMethod}" ></h:outputLabel>                                   
+                                <h:outputLabel value="#{bb.patientEncounter.paymentMethod}" ></h:outputLabel>                                   
                             </p:column>
                             <p:column headerText="Value" >                              
                                 <h:outputLabel value="#{bb.netTotal}" >
