--- a/src/main/webapp/pharmacy/pharmacy_item_master.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_item_master.xhtml
@@ -78,6 +78,10 @@
                                         <p:inputText autocomplete="off"  value="#{ampController.current.code}"  ></p:inputText>
                                         <h:outputText value="" ></h:outputText>
 
+                                        <h:outputText  value="Department Type" ></h:outputText>
+                                        <h:outputText  value="#{ampController.current.departmentType}" ></h:outputText>
+                                        <h:outputText value="" ></h:outputText>
+                                        
                                         <h:outputText  value="Bar Code" ></h:outputText>
                                         <p:inputText autocomplete="off"  value="#{ampController.current.barcode}"  ></p:inputText>
                                         <h:outputText value="" ></h:outputText>
