--- a/src/main/webapp/inward/report_md_inward_item_1.xhtml
+++ b/src/main/webapp/inward/report_md_inward_item_1.xhtml
@@ -139,6 +139,12 @@
                             </f:facet>
                             <h:outputLabel value="#{i.billItem.bill.patientEncounter.bhtNo}"/>
                         </p:column>
+                        <p:column headerText="Bill No" sortBy="#{i.billItem.bill.insId}" >
+                            <f:facet name="header">
+                                <p:outputLabel value="Bill No" />
+                            </f:facet>
+                            <h:outputLabel value="#{i.billItem.bill.insId}"/>
+                        </p:column>
                         <p:column headerText="Institution" sortBy="#{i.billItem.item.institution.name}" rendered="#{mdInwardReportController.institution eq null}">
                             <f:facet name="header">
                                 <p:outputLabel value="Institution" />
