Channel online agent refeence change and remove bill property printed at,print Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/channel/channel_booking.xhtml
+++ b/src/main/webapp/channel/channel_booking.xhtml
@@ -767,12 +767,12 @@
                                         </p:outputLabel>
                                         <p:separator rendered="#{bookingController.selectedBillSession.bill.printed==true}" ></p:separator>
                                         <p:separator rendered="#{bookingController.selectedBillSession.bill.printed==true}" ></p:separator>
-                                        <p:outputLabel value="Printed User"/>
+<!--                                        <p:outputLabel value="Printed User"/>
                                         <p:outputLabel value="#{bookingController.selectedBillSession.bill.printedUser.webUserPerson.nameWithTitle}"/>
                                         <p:outputLabel value="Printed At"/>
                                         <p:outputLabel value="#{bookingController.selectedBillSession.bill.printedAt}"> 
                                             <f:convertDateTime pattern="dd/MMM/yyyy - hh:mm a" ></f:convertDateTime>
-                                        </p:outputLabel>
+                                        </p:outputLabel>-->
                                         <p:separator rendered="#{bookingController.selectedBillSession.bill.cancelled==true or bookingController.selectedBillSession.bill.refunded==true}" ></p:separator>
                                         <p:separator rendered="#{bookingController.selectedBillSession.bill.cancelled==true or bookingController.selectedBillSession.bill.refunded==true}" ></p:separator>
                                         <p:outputLabel style="color: red" value="Payment" rendered="#{bookingController.selectedBillSession.bill.cancelled==true or bookingController.selectedBillSession.bill.refunded==true}" />
