--- a/src/main/webapp/inward/investigation_search_for_reporting_bht.xhtml
+++ b/src/main/webapp/inward/investigation_search_for_reporting_bht.xhtml
@@ -168,7 +168,7 @@
                                     >
                                     <h:column >
                                         <p:commandLink id="cmdOldReportPrint" ajax="false" action="/lab/lab_patient_report_print">
-                                            <p:graphicImage library="image/icon" name="print.jpg" styleClass="standedicon" ></p:graphicImage>                                                
+                                            <p:graphicImage library="image" name="print.jpg" styleClass="standedicon" ></p:graphicImage>                                                
                                             <f:setPropertyActionListener value="#{dpr}" target="#{patientReportController.currentPatientReport}"></f:setPropertyActionListener>
                                         </p:commandLink>
 
