--- a/src/main/webapp/lab_report_for_opd_print.xhtml
+++ b/src/main/webapp/lab_report_for_opd_print.xhtml
@@ -183,13 +183,13 @@
                                           
 
                                             <p:commandLink id="cmdOldReportPrint" ajax="false" action="/lab/lab_patient_report_print">
-                                                <p:graphicImage library="image/icon" name="print.jpg" styleClass="standedicon" ></p:graphicImage>
+                                                <p:graphicImage library="image" name="print.jpg" styleClass="standedicon" ></p:graphicImage>
                                                 <f:setPropertyActionListener value="#{dpr}" target="#{patientReportController.currentPatientReport}"></f:setPropertyActionListener>
                                             </p:commandLink>
                                             
-                                            <p:graphicImage id="imgApproved" library="image/icon" name="approved_icon.png" 
+                                            <p:graphicImage id="imgApproved" library="image" name="approved_icon.png" 
                                                             style="height: 30px; width: 30px; #{dpr.approved ? '':'opacity: 0.1;'}" ></p:graphicImage>
-                                            <p:graphicImage id="imgPrinted" library="image/icon" name="print_ok.png" 
+                                            <p:graphicImage id="imgPrinted" library="image" name="print_ok.png" 
                                                             style="height: 30px; width: 30px;#{dpr.printed ? '':'opacity: 0.1;'}" ></p:graphicImage>
                                         </h:panelGrid>
 
