--- a/src/main/webapp/lab/lab_patient_report_print.xhtml
+++ b/src/main/webapp/lab/lab_patient_report_print.xhtml
@@ -24,6 +24,8 @@
 
 
                     <p:commandButton styleClass="nonPrintBlock" ajax="false" value="Print" onclick="window.print();" actionListener="#{patientReportController.printPatientReport()}" />
+<!--                    <p:commandButton styleClass="nonPrintBlock" ajax="false" value="PDF" 
+                                     action="#{patientReportController.createPDF()}" onclick="this.form.target = '_blank'" />-->
                     <!--<p:commandButton styleClass="nonPrintBlock" ajax="false" value="Back" action="/lab_search_for_reporting_ondemand"/>-->
 
 
@@ -162,7 +164,7 @@
                                         </h:outputText>
                                         <h:outputText rendered="#{myCli.ixItemType ne 'Label' and myCli.reportItemType eq 'ReferringDoctor' and myCli.retired eq false }"  value="#{patientReportController.currentPatientReport.patientInvestigation.billItem.bill.referredBy.person.nameWithTitle}" style="color: #{myCli.cssColor}" escape="false" ></h:outputText>
                                         <h:outputText rendered="#{myCli.ixItemType ne 'Label' and myCli.reportItemType eq 'ReferringInstitution' and myCli.retired eq false }"  value="#{patientReportController.currentPatientReport.patientInvestigation.billItem.bill.referredByInstitution.name}" style="color: #{myCli.cssColor}" escape="false" ></h:outputText>
-                                        
+
                                         <h:panelGroup rendered="#{patientReportController.currentPatientReport.approveUser.staff.baImage ne null}">
                                             <p:graphicImage rendered="#{myCli.reportItemType eq 'AutherizedSignature' and myCli.retired eq false }"    value="#{staffImageController.signatureById}" style="width: #{myCli.cssWidth}; max-height: 50px!important;"  >
                                                 <f:param name="id" value="#{patientReportController.currentPatientReport.approveUser.staff.id}" />
