--- a/src/main/webapp/reports_new_1.xhtml
+++ b/src/main/webapp/reports_new_1.xhtml
@@ -21,13 +21,13 @@
 
         <!--<h:outputStylesheet library="css" name="styles.css" />-->
         <!--login modal-->
-        <div id="loginModal" class="modal show" tabindex="-1" role="dialog" aria-hidden="true">
+        <div id="loginModal" class="" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
-                <div class="modal-content clearfix">
+                <div class="modal-content">
                     <div class="modal-header">
-                        <h1 class="text-center">Fill the Details and click the button to view your reports</h1>
+                        <h1 class="text-center">My Lab Report</h1>
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-body clearfix">
                         <h:form >
                             <div class="form col-md-12 center-block">
                                 <div class="form-group  clearfix">
@@ -40,15 +40,12 @@
                                 <div class="form-group  clearfix">
                                     <label for="inputEmail3" class="col-sm-4 control-label">Phone Number</label>
                                     <div class="col-sm-8">
-                                        <p:inputMask mask="999-9999999" id="txtNewPtPhone" placeholder="Phone No"
-                                                     autocomplete="off" maxlength="11" 
-                                                     value="#{sessionController.phoneNo}" styleClass="form-control input-lg">
-                                        </p:inputMask>
-                                        <!--<input type="text" class="form-control input-lg" id="inputEmail3" placeholder="Phone Number" data-format="ddd-ddddddd"/>-->
+                                        <p:inputText placeholder="Phone Number" value="#{sessionController.phoneNo}" styleClass="form-control input-lg" maxlength="10"/>
+                                        <!--<input value="#{sessionController.phoneNo}" type="text" class="form-control input-lg" placeholder="Phone Number" maxlength="10"/>-->
                                     </div>
                                 </div>
                                 <div class="form-group  clearfix">
-                                    <h:commandButton class="btn btn-success btn-lg btn-block"  action="#{searchController.fillUserPatientReportWeb}" value="View Reports" />
+                                    <h:commandButton class="btn btn-success btn-lg btn-block"  action="#{searchController.fillUserPatientReportMobile}" value="View Reports" />
                                     <!--<button class="btn btn-success btn-lg btn-block" >View Reports</button>-->
                                 </div>
                             </div>
