--- a/src/main/webapp/reports_new_1.xhtml
+++ b/src/main/webapp/reports_new_1.xhtml
@@ -30,17 +30,21 @@
                     <div class="modal-body clearfix">
                         <h:form >
                             <div class="form col-md-12 center-block">
+                                <div class="alert alert-danger alert-dismissable fade in" style="display: #{searchController.reportKeyWord.string eq '0' ? 'none' : ''};" >
+                                    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                                    <strong>Warning! </strong> #{searchController.reportKeyWord.string}
+                                </div>
                                 <div class="form-group  clearfix">
                                     <label for="inputEmail3" class="col-sm-4 control-label">Bill Number</label>
                                     <div class="col-sm-8">
-                                        <p:inputText placeholder="Bill No" value="#{sessionController.billNo}" styleClass="form-control input-lg" />
+                                        <p:inputText placeholder="Bill No" value="#{sessionController.billNo}" styleClass="form-control input-lg" autocomplete="off" />
                                     <!--<input type="txt" value="#{sessionController.billNo}" class="form-control input-lg" id="inputEmail3" placeholder="Bill Number"/>-->
                                     </div>
                                 </div>
                                 <div class="form-group  clearfix">
                                     <label for="inputEmail3" class="col-sm-4 control-label">Phone Number</label>
                                     <div class="col-sm-8">
-                                        <p:inputText placeholder="Phone Number" value="#{sessionController.phoneNo}" styleClass="form-control input-lg" maxlength="10"/>
+                                        <p:inputText placeholder="Phone Number" value="#{sessionController.phoneNo}" styleClass="form-control input-lg" maxlength="10" autocomplete="off"/>
                                         <!--<input value="#{sessionController.phoneNo}" type="text" class="form-control input-lg" placeholder="Phone Number" maxlength="10"/>-->
                                     </div>
                                 </div>
