HR OT chnges for secrity staff Signed-off-by: HNDITDushan <s.t.dushan@gmail.com>

--- a/src/main/webapp/hr/hr_report_month_end_work_time_miniuts_summery.xhtml
+++ b/src/main/webapp/hr/hr_report_month_end_work_time_miniuts_summery.xhtml
@@ -50,7 +50,8 @@
                             <h:outputLabel value="Department : "/>
                             <hr:department value="#{hrReportController.reportKeyWord.department}"/>
                             <h:outputLabel value="Employee : "/>
-                            <hr:completeStaff value="#{hrReportController.reportKeyWord.staff}"/>
+                            <hr:completeStaffChannel value="#{hrReportController.reportKeyWord.staff}"/>
+                            <!--<hr:completeStaff value="#{hrReportController.reportKeyWord.staff}"/>-->
                             <h:outputLabel value="Staff Category : "/>
                             <hr:completeStaffCategory value="#{hrReportController.reportKeyWord.staffCategory}"/>
                             <h:outputLabel value="Staff Designation : "/>
